aks/gw-api/01-application-gateway-for-containers-labs/spec/01-gateway-byo.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: agc-lab-gateway
  namespace: agc-lab
  annotations:
    alb.networking.azure.io/alb-id: "${AGC_RESOURCE_ID}"
spec:
  gatewayClassName: azure-alb-external
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
  addresses:
    - type: alb.networking.azure.io/alb-frontend
      value: "${FRONTEND_NAME}"
