aks/gw-api/01-application-gateway-for-containers-labs/spec/04-url-rewrite-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: url-rewrite-route
  namespace: agc-lab
spec:
  parentRefs:
    - name: agc-lab-gateway
  hostnames:
    - rewrite.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /shop
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /ecommerce
      backendRefs:
        - name: store-v1
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: store-v2
          port: 8080
