aks/gw-api/01-application-gateway-for-containers-labs/spec/05-https-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-route
  namespace: agc-lab
spec:
  parentRefs:
    - name: agc-lab-gateway
      sectionName: https
  hostnames:
    - secure.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: web-v1
          port: 8080
